# BasiraAajil

./: DEMO_GUIDE.md  README.md  schema.sql  writeup.md
DocuChatAI/: basira.db  create_sample_pdfs.py  database.py  main.py  models.py  pipeline_stages.py  pyproject.toml  test_pii_redaction.py  worker.py
DocuChatAI/attached_assets/: Architecture Overview_1763150385067.docx  Pasted-2-Technical-Write-Up-2-to-4-pages-Explain-your-design-the-tools-or-approaches-you-d-choose-and--1763150636034_1763150636034.txt
DocuChatAI/static/: index.html
