[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.121.2",
    "pillow>=12.0.0",
    "pydantic>=2.12.4",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.4",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
